fix some readme and code text

--- a/notebooks/exposure/4. generate_exposure_tiles.ipynb
+++ b/notebooks/exposure/4. generate_exposure_tiles.ipynb
@@ -14,7 +14,7 @@
     "1. Get elevation relative to sea level\n",
     "2. Match to nearest country, impact region, protection zone (e.g. levees)\n",
     "3. Uniformly distribute exposure over all surface area > 0 elevation within a 30\" pixel\n",
-    "4. Aggregate both surface area and exposure up to .1d X .1d X .1m X country X impact region X protection zone"
+    "4. Aggregate both surface area and exposure up to adm1 X coastal segment X protection zone X wetland flag X .1-meter elevation bin"
    ]
   },
   {
