dask image name update

--- a/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
+++ b/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "# dask gateway setup\n",
     "gateway = Gateway()\n",
-    "cluster_name = sset.DASK_IMAGE"
+    "cluster_name = sset.DASK_LATEST_WORKER_IMAGE"
    ]
   },
   {
