updated dask image information, removed unused modules

--- a/notebooks/country_level_ypk/ypk6_projected_yp.ipynb
+++ b/notebooks/country_level_ypk/ypk6_projected_yp.ipynb
@@ -26,21 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import shutil\n",
-    "import warnings\n",
-    "from itertools import product as lstprod\n",
-    "from pathlib import Path\n",
-    "\n",
     "import dask.dataframe as ddf\n",
     "import geopandas as gpd\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import statsmodels.api as sm\n",
-    "import xarray as xr\n",
     "from dask_gateway import Gateway\n",
-    "from scipy.optimize import minimize as opt_min\n",
     "from shapely.geometry import MultiPolygon, Point, Polygon\n",
     "from tqdm.auto import tqdm\n",
     "\n",
@@ -50,7 +40,7 @@
     "\n",
     "# dask gateway setup\n",
     "gateway = Gateway()\n",
-    "cluster_name = sset.DASK_IMAGE"
+    "image_name = sset.DASK_LATEST_WORKER_IMAGE"
    ]
   },
   {
@@ -65,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c2cd5c54-8cbd-41ee-a59f-8814a08c869b",
    "metadata": {},
    "outputs": [],
@@ -93,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f9257a09-1d0b-4823-97e9-b4128047697f",
    "metadata": {},
    "outputs": [],
@@ -116,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d27b24a5-9e62-4cbe-8e44-18cc91f4d7bf",
    "metadata": {},
    "outputs": [],
@@ -157,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "114700b0-8bb1-401f-9ad6-f15f6d6f7584",
    "metadata": {},
    "outputs": [],
@@ -197,22 +187,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b549fa6b-6943-4dba-ac0d-c101934f5e75",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SSP1: 0.0\n",
-      "SSP2: 0.0\n",
-      "SSP3: 0.0\n",
-      "SSP4: 0.0\n",
-      "SSP5: 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## checking\n",
     "fra_dept = [\"FRA\", \"MYT\", \"MTQ\", \"GUF\", \"GLP\", \"REU\"]\n",
@@ -239,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "00eebffc-9e8d-4c4c-ae6c-7edb7608a0bb",
    "metadata": {},
    "outputs": [],
@@ -266,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0b4ffab9-6a77-46e8-8b5c-047aea3d4d51",
    "metadata": {},
    "outputs": [],
@@ -299,28 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d0dc5b3b-f4a3-44b3-b683-58384fab58f9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f76c55d1c6fc4175a1d8c0547c25ce69",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<h2>GatewayCluster</h2>'), HBox(children=(HTML(value='\\n<div>\\n<style scoped>\\n    …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cluster setup\n",
-    "cluster = gateway.new_cluster(worker_image=cluster_name, profile=\"micro\")\n",
+    "cluster = gateway.new_cluster(worker_image=image_name, profile=\"micro\")\n",
     "client = cluster.get_client()\n",
     "cluster.scale(20)\n",
     "cluster"
@@ -328,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4337c936-5fa5-475f-9d53-e0d264dfe710",
    "metadata": {},
    "outputs": [],
@@ -364,25 +327,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "eb96648b-8e63-46e4-a7d3-455befe3987a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f05e715121847368cfbe6e5382fad72",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/56 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ctries_shp_lst = []\n",
     "for iso in tqdm(need_landscan):\n",
@@ -411,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "bb57e860-d8f5-48b5-ba02-13d353ed4762",
    "metadata": {},
    "outputs": [],
@@ -459,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "3ae71c8f-da0a-4f28-b38e-3a81d155b817",
    "metadata": {},
    "outputs": [],
@@ -480,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "6220182a-f73a-4cce-98b5-b861836ac806",
    "metadata": {},
    "outputs": [],
@@ -516,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "10751dae-3d6c-42a7-8862-862c7d91e072",
    "metadata": {},
    "outputs": [],
@@ -604,29 +552,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "c4f37aba-7333-4ab3-a3f2-c1b8a248bb54",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0319e30ba53418a9f79fa2680ceb394",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ii_gdppc = ii_gdp.merge(ii_pop[[\"pop\"]], how=\"left\", left_index=True, right_index=True)\n",
     "ii_gdppc[\"gdppc\"] = ii_gdppc[\"gdp\"] / ii_gdppc[\"pop\"]\n",
-    "scenarios = list(lstprod(*[[f\"SSP{x}\" for x in range(1, 6)], [\"IIASA\", \"OECD\"]]))\n",
+    "scenarios = sset.SCENARIOS\n",
     "scen_dfs = []\n",
     "for scen in tqdm(scenarios):\n",
     "    ssp, iam = scen\n",
@@ -659,25 +592,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "76068d53-09ae-4b5d-9c9e-61cf8c2a4f82",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e82e735e6eb4f4ca5110af93c01d701",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ii_gdppc_w_pop = ii_gdppc.merge(\n",
     "    ii_pop[[\"pop\"]], how=\"left\", left_index=True, right_index=True\n",
@@ -710,25 +628,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "30523a73-509e-4ba4-ae81-987cf3ceacea",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bfe6652ca2f4a99b23005a33261d468",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/65 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdppc_yesproj = np.sort(ii_gdppc.index.get_level_values(\"ccode\").unique())\n",
     "gdppc_noproj = np.setdiff1d(sset.ALL_ISOS, gdppc_yesproj)\n",
@@ -745,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "4b87ded6-1b9e-4b20-a7ed-df5b496083de",
    "metadata": {},
    "outputs": [],
@@ -773,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "cee6f9c8-95de-4be6-a5e1-38d808cc2b58",
    "metadata": {},
    "outputs": [],
@@ -799,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "90014b99-5414-4ded-b19b-659f861cf637",
    "metadata": {},
    "outputs": [],
@@ -829,7 +732,287 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {},
+    "state": {
+     "1fe33cb6bebf4bbcbb760d072d4360e0": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "212143be603449c4984f7599487b3652": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "225db7747800498288899ea3c66fe7f8": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "FloatProgressModel",
+      "state": {
+       "bar_style": "success",
+       "layout": "IPY_MODEL_54bcc6dc79a44c7f845e16c992781c01",
+       "max": 10,
+       "style": "IPY_MODEL_adc7867e6a1e492db907eb987439d126",
+       "value": 10
+      }
+     },
+     "3fddc399a8cb41108d001938097cd19c": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "43b66ad3a0244e19a6b59aac4025a55a": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ProgressStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "443fcb46485147d19264cfc90e58a113": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "4c52c929c1d04002a8edfa6800681a28": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HBoxModel",
+      "state": {
+       "children": [
+        "IPY_MODEL_c919b944e30e4607914187408adecf28",
+        "IPY_MODEL_225db7747800498288899ea3c66fe7f8",
+        "IPY_MODEL_6eb2a31a29104c5cb79e6204366c7d8d"
+       ],
+       "layout": "IPY_MODEL_eac20744d1ec4cac87564937d3bc2534"
+      }
+     },
+     "54bcc6dc79a44c7f845e16c992781c01": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "54d14e481a0a4acaa216fd2ca10f71cb": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ProgressStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "5892c0d47ee6485dbeb747ae84b805d2": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_a126330619cd4700a9f3d054e1e5c64b",
+       "style": "IPY_MODEL_cd1fc1976f334992b6e7b13014e936f9",
+       "value": "100%"
+      }
+     },
+     "5fc96f686a924a21b8083690b0bed73b": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "65d1d3fe1953496e95d958ec9fce4ab0": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_fcdbd9e19f444954af3547ab69507f07",
+       "style": "IPY_MODEL_5fc96f686a924a21b8083690b0bed73b",
+       "value": " 65/65 [00:00&lt;00:00, 217.99it/s]"
+      }
+     },
+     "6df0289d43424c239f9fe5a3bc7a096b": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "FloatProgressModel",
+      "state": {
+       "bar_style": "success",
+       "layout": "IPY_MODEL_c1bda75ba75445fbb1c5fe1b1fe057af",
+       "max": 10,
+       "style": "IPY_MODEL_43b66ad3a0244e19a6b59aac4025a55a",
+       "value": 10
+      }
+     },
+     "6eb2a31a29104c5cb79e6204366c7d8d": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_f05ab6b949e641f99c96010341168455",
+       "style": "IPY_MODEL_3fddc399a8cb41108d001938097cd19c",
+       "value": " 10/10 [00:09&lt;00:00,  1.06it/s]"
+      }
+     },
+     "7307af71e79d4ba1909f626d2d60b91f": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HBoxModel",
+      "state": {
+       "children": [
+        "IPY_MODEL_5892c0d47ee6485dbeb747ae84b805d2",
+        "IPY_MODEL_7643657713d44f95b8e0c5a4ac47b210",
+        "IPY_MODEL_65d1d3fe1953496e95d958ec9fce4ab0"
+       ],
+       "layout": "IPY_MODEL_f9e9e5fd99ab4871abf947540e81d3db"
+      }
+     },
+     "7643657713d44f95b8e0c5a4ac47b210": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "FloatProgressModel",
+      "state": {
+       "bar_style": "success",
+       "layout": "IPY_MODEL_93a97ea0fb7a4313a22ce84474510949",
+       "max": 65,
+       "style": "IPY_MODEL_54d14e481a0a4acaa216fd2ca10f71cb",
+       "value": 65
+      }
+     },
+     "7dbecaf2104841229e610f3278db1ec5": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_212143be603449c4984f7599487b3652",
+       "style": "IPY_MODEL_443fcb46485147d19264cfc90e58a113",
+       "value": " 10/10 [00:00&lt;00:00, 47.29it/s]"
+      }
+     },
+     "93a97ea0fb7a4313a22ce84474510949": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "a126330619cd4700a9f3d054e1e5c64b": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "adbc3e55dfa946449376d8996e763a2f": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "adc7867e6a1e492db907eb987439d126": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ProgressStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "b5716e0db49e41cfa36d04628dc8836a": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "c1bda75ba75445fbb1c5fe1b1fe057af": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "c210bd240bf548b5901796931092b2bb": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "c919b944e30e4607914187408adecf28": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_e600c3159f2d4c1c8a6c0797780d8eb1",
+       "style": "IPY_MODEL_c210bd240bf548b5901796931092b2bb",
+       "value": "100%"
+      }
+     },
+     "cd1fc1976f334992b6e7b13014e936f9": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "d5aa29d413dc4758bd3fcfe125e53b45": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HBoxModel",
+      "state": {
+       "children": [
+        "IPY_MODEL_f601715b349a42caac99e4d2efc4a61e",
+        "IPY_MODEL_6df0289d43424c239f9fe5a3bc7a096b",
+        "IPY_MODEL_7dbecaf2104841229e610f3278db1ec5"
+       ],
+       "layout": "IPY_MODEL_1fe33cb6bebf4bbcbb760d072d4360e0"
+      }
+     },
+     "e600c3159f2d4c1c8a6c0797780d8eb1": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "eac20744d1ec4cac87564937d3bc2534": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "f05ab6b949e641f99c96010341168455": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "f601715b349a42caac99e4d2efc4a61e": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_b5716e0db49e41cfa36d04628dc8836a",
+       "style": "IPY_MODEL_adbc3e55dfa946449376d8996e763a2f",
+       "value": "100%"
+      }
+     },
+     "f9e9e5fd99ab4871abf947540e81d3db": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "fcdbd9e19f444954af3547ab69507f07": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     }
+    },
     "version_major": 2,
     "version_minor": 0
    }
