updated dask image information

--- a/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
+++ b/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "# dask gateway setup\n",
     "gateway = Gateway()\n",
-    "cluster_name = sset.DASK_LATEST_WORKER_IMAGE"
+    "image_name = sset.DASK_LATEST_WORKER_IMAGE"
    ]
   },
   {
@@ -369,7 +369,7 @@
    "source": [
     "## cluster setup\n",
     "N_CLUSTER = len(links)\n",
-    "cluster = gateway.new_cluster(worker_image=cluster_name, profile=\"micro\")\n",
+    "cluster = gateway.new_cluster(worker_image=image_name, profile=\"micro\")\n",
     "client = cluster.get_client()\n",
     "cluster.scale(N_CLUSTER)\n",
     "cluster"
