updated dask image information, removed unused modules

--- a/notebooks/country_level_ypk/ypk2_prep_clean.ipynb
+++ b/notebooks/country_level_ypk/ypk2_prep_clean.ipynb
@@ -31,9 +31,7 @@
     "import json\n",
     "import os\n",
     "import shutil\n",
-    "import warnings\n",
     "import zipfile\n",
-    "from itertools import product as lstprod\n",
     "from operator import itemgetter\n",
     "from pathlib import Path\n",
     "\n",
@@ -56,7 +54,7 @@
     "\n",
     "# dask gateway setup\n",
     "gateway = Gateway()\n",
-    "cluster_name = sset.DASK_LATEST_WORKER_IMAGE"
+    "image_name = sset.DASK_LATEST_WORKER_IMAGE"
    ]
   },
   {
@@ -305,7 +303,7 @@
    "source": [
     "# cluster setup\n",
     "N_CLUSTER = 20\n",
-    "cluster = gateway.new_cluster(worker_image=cluster_name, profile=\"micro\")\n",
+    "cluster = gateway.new_cluster(worker_image=image_name, profile=\"micro\")\n",
     "client = cluster.get_client()\n",
     "cluster.scale(N_CLUSTER)\n",
     "cluster"
@@ -454,7 +452,7 @@
    "source": [
     "# cluster setup\n",
     "N_CLUSTER = 20\n",
-    "cluster = gateway.new_cluster(worker_image=cluster_name, profile=\"micro\")\n",
+    "cluster = gateway.new_cluster(worker_image=image_name, profile=\"micro\")\n",
     "client = cluster.get_client()\n",
     "cluster.scale(N_CLUSTER)\n",
     "cluster"
