--- a/notebooks/exposure/nearest_regions/1a. assign-isos-to-points.ipynb
+++ b/notebooks/exposure/nearest_regions/1a. assign-isos-to-points.ipynb
@@ -31,16 +31,115 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
+    "\n",
     "from sliiders import settings as sset\n",
+    "from sliiders import spatial\n",
     "\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\", message=\".*initial implementation of Parquet.*\")"
+    "spatial.filter_spatial_warnings()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "2c414e9e-5637-4201-802f-e7626d010244",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adm0 = gpd.read_file(sset.PATH_GADM, layer=\"level0\", ignore_geometry=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "84477aa5-bf0e-4fb0-9dae-9a2a06c321af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adm0 = set(adm0['GID_0'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "207953e6-d0e3-4654-aabc-3712d644ede1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ciam_adm0 = set(gpd.read_parquet(sset.PATH_CIAM_SITES_WITHISO)['ISO'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d70a7948-5003-425e-8b03-f010bbf5d4cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AFG',\n",
+       " 'AND',\n",
+       " 'ARM',\n",
+       " 'ATA',\n",
+       " 'AUT',\n",
+       " 'AZE',\n",
+       " 'BDI',\n",
+       " 'BFA',\n",
+       " 'BLR',\n",
+       " 'BOL',\n",
+       " 'BTN',\n",
+       " 'BWA',\n",
+       " 'CAF',\n",
+       " 'CHE',\n",
+       " 'CZE',\n",
+       " 'ETH',\n",
+       " 'HUN',\n",
+       " 'KAZ',\n",
+       " 'KGZ',\n",
+       " 'LAO',\n",
+       " 'LIE',\n",
+       " 'LSO',\n",
+       " 'LUX',\n",
+       " 'MAC',\n",
+       " 'MDA',\n",
+       " 'MKD',\n",
+       " 'MLI',\n",
+       " 'MNG',\n",
+       " 'MWI',\n",
+       " 'NER',\n",
+       " 'NPL',\n",
+       " 'PRY',\n",
+       " 'RWA',\n",
+       " 'SMR',\n",
+       " 'SRB',\n",
+       " 'SSD',\n",
+       " 'SVK',\n",
+       " 'SWZ',\n",
+       " 'TCD',\n",
+       " 'TJK',\n",
+       " 'TKM',\n",
+       " 'UGA',\n",
+       " 'UZB',\n",
+       " 'VAT',\n",
+       " 'XCA',\n",
+       " 'XKO',\n",
+       " 'XPI',\n",
+       " 'ZMB',\n",
+       " 'ZWE'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adm0 - ciam_adm0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ad54fd85-2e2b-429e-a11e-9f246cb9ce2e",
    "metadata": {},
    "outputs": [],
@@ -50,111 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9afbb215-2125-4a23-ab0d-13e0356aa640",
+   "execution_count": null,
+   "id": "b2307559-a298-43d5-b1a8-43bfaca043ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stations_wo_country = gpd.read_file(sset.PATH_CIAM_SITES)"
+    "stations = spatial.match_stations_to_countries(countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6f016cf1-eee4-4277-94b1-326be1c3cfb0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9592"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stations = gpd.sjoin(stations_wo_country, countries, how=\"left\", predicate=\"within\")\n",
-    "\n",
-    "stations.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b79bd04-f5be-4e33-a972-c95fb389d050",
-   "metadata": {},
-   "source": [
-    "#### Check that match is one-to-one"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a08b22e1-c4c3-4b26-bc85-16d7c8abdaff",
-   "metadata": {},
-   "source": [
-    "Check there is no more than one match for each station"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "953d81e4-f147-4272-be1c-642950080737",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert stations.shape[0] == stations_wo_country.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e6f67075-6c4a-4527-a745-c309f40a8e47",
-   "metadata": {},
-   "source": [
-    "Check there is at least one match for each station"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "90b5df8b-c0bd-4f75-8c74-3bc75ea7fede",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert stations[\"ISO\"].isnull().sum() == 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d4350af2-df9b-40a9-9e81-3dc9479068cf",
-   "metadata": {},
-   "source": [
-    "#### Clean and save"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "78801a05-d99f-49da-82f6-6ba7b766dc38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stations = stations.drop(columns=[\"index_right\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "456bc005-a207-4595-a2c0-418aaa377156",
    "metadata": {},
    "outputs": [],
    "source": [
     "sset.PATH_CIAM_SITES_WITHISO.parent.mkdir(exist_ok=True)\n",
     "\n",
-    "stations[[\"station_id\", \"lat\", \"lon\", \"geometry\", \"ISO\"]].to_parquet(\n",
-    "    sset.PATH_CIAM_SITES_WITHISO, index=False\n",
-    ")"
+    "stations.to_parquet(sset.PATH_CIAM_SITES_WITHISO, index=False)"
    ]
   }
  ],
@@ -174,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
